Upgraded projects to Java 11 (#1)
* Release 2.2.0 changes (#91)

* Update XML files to use new XSD references for the 3.0.0 release series

* In component.xml bump versions for upcoming release

* Add more release notes from review of commits since last release, update year in AUTHORS

* In README.md update last release version, add forum badge and make badges more consistent

* Add URL Slug ProductIdentificationType based on discussion a while back on forum.moqui.org

* Add ProductCategoryIdent, ProductStoreDataDocument, and ProductIdentificationType URL Slug (#92)

* Add ProductOtherIdentification relationship to Product, Add ProductIdentificationType URL Slug, Add ProductStoreDataDocument and relationships, Add ProductCategoryIdent and relationships

* Rename typeEnumIds from Slug to UrlSlug for clarity, Add deprecation warning to ProductStore's dataDocumentId field descriptions, rename storeDataDocumentTypeEnumId to storeDocumentTypeEnumId, Rename ProductStoreDataDocument Enum descriptions, rename productCategoryIdentTypeEnumId to identTypeEnumId

* Rename storeDocumentTypeEnumId to typeEnumId

* In HumanResourceEntities move PartySkill out of commented section and add 3 entities for configuring which PartyClassifications, PartyDimension types, and PartySkill types are applicable for a EmplPosition

* In WorkEffortEntities add WorkEffortParty.emplPositionId field to tracking which position that party fills on the work effort

* In PartyEntities add two commented entities, might be useful but not currently used or needed for current requirements

* Add WorkEffortEmplPosition join entity instead of a EmplPosition.workEffortId field that does not allow reuse of EmplPosition

* Remove EmplPositionClassPartyCls entity, what was needed was really a join entity to a PartyClassificationType enum record and not the individual PartyClassification record, so replace it with a new entity EmplPositionClassPtyClsTp

* Add EnumerationType for Part

--- a/AUTHORS
+++ b/AUTHORS
@@ -34,7 +34,7 @@ that are otherwise encumbered.
 
 Signed by git commit adding my legal name and git username:
 
-Written in 2010-2020 by David E. Jones - jonesde
+Written in 2010-2022 by David E. Jones - jonesde
 Written in 2014-2015 by Solomon Bessire - sbessire
 Written in 2012-2015 by Sam Hamilton - samhamilton
 Written in 2014-2015 by Yao Chunlin - chunlinyao
@@ -48,6 +48,7 @@ written in 2019 by Deepak Dixit - dixitdeepak
 Written in 2020 by John Watson - jotson
 Written in 2021 by Do Nhu Vy - donhuvy
 Written in 2020-2021 by Amir Anjomshoaa - amiranjom
+Written in 2022 by Guru Dharam Singh Khalsa - pandor4u
 
 ===========================================================================
 
@@ -69,7 +70,7 @@ litigation is filed.
 
 Signed by git commit adding my legal name and git username:
 
-Written in 2010-2020 by David E. Jones - jonesde
+Written in 2010-2022 by David E. Jones - jonesde
 Written in 2014-2015 by Solomon Bessire - sbessire
 Written in 2014-2015 by Yao Chunlin - chunlinyao
 Written in 2015-2016 by Jens Hardings - jenshp
@@ -82,5 +83,6 @@ written in 2019 by Deepak Dixit - dixitdeepak
 Written in 2020 by John Watson - jotson
 Written in 2021 by Do Nhu Vy - donhuvy
 Written in 2020-2021 by Amir Anjomshoaa - amiranjom
+Written in 2022 by Guru Dharam Singh Khalsa - pandor4u
 
 ===========================================================================
